manifests/grist/grist.yaml
apiVersion: v1
kind: Service
metadata:
  name: grist
  namespace: grist
  labels:
    app.kubernetes.io/name: grist
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8484
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: grist
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grist
  namespace: grist
  labels:
    app.kubernetes.io/name: grist
  annotations:
    secret.reloader.stakater.com/reload: "grist"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grist
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grist
    spec:
      serviceAccountName: grist
      priorityClassName: critical
      containers:
        - name: grist
          image: gristlabs/grist-oss:1.7.18
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8484
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          resources:
            requests:
              memory: 300M
            limits:
              memory: 600M
          securityContext:
            capabilities:
              add:
              - SYS_PTRACE
          volumeMounts:
            - name: data
              mountPath: /persist
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grist-data
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grist
  namespace: grist
  labels:
    app.kubernetes.io/name: grist
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grist.cluster.fun
    secretName: grist-ingress
  rules:
    - host: "grist.cluster.fun"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grist
                port:
                  number: 80
